# start9labs-monerod-wrapper

./: .gitignore  Dockerfile  Makefile  README.md  docker_entrypoint.sh  manifest.yaml
assets/: monerod.conf.template
monero/: Cargo.toml
monero/src/: main.rs
