[package]
name = "monerod"
version = "1.2.0"
authors = ["Goshiz <goshiz@goshiz.io>"]
edition = "2018"

[dependencies]
tiny-tmpl = "0.1.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.15"
serde_json = "1.0"
regex = "1.4.3"
ctrlc = { version = "3.1.7", features = ["termination"] }
nix = "0.19.1"
linear-map = { version = "*", features = ["serde_impl"] }
lazy_static = "1.4.0"